--- a/house.gov.by/7f75d2d1e80e6aa5f8fe0e4e78721b8f4b7d2d4e.yml
+++ b/house.gov.by/7f75d2d1e80e6aa5f8fe0e4e78721b8f4b7d2d4e.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Fri, 27 Oct 2017 01:21:16 GMT
+    - Fri, 27 Oct 2017 04:06:50 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=v235niva6e8n39je2bub242ve1; path=/
+    - PHPSESSID=2r6jcipdcpjnum95u324e6ieq1; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - EXPIRED
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Fri, 27 Oct 2017 01:21:17 GMT
+recorded_at: Fri, 27 Oct 2017 04:06:51 GMT
