--- a/house.gov.by/e0bfa57e716611ea6eacdda6cc645de1d148b08c.yml
+++ b/house.gov.by/e0bfa57e716611ea6eacdda6cc645de1d148b08c.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Fri, 27 Oct 2017 02:02:42 GMT
+    - Fri, 27 Oct 2017 04:15:19 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=6s0io8t7j4tbedaes6sga2qqb7; path=/
+    - PHPSESSID=uf2jdid1obpmu7vqb0k46fc3b1; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - EXPIRED
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Fri, 27 Oct 2017 02:02:43 GMT
+recorded_at: Fri, 27 Oct 2017 04:15:21 GMT
