--- a/house.gov.by/34b939f57a446b8616b2a998ea274073dff804fd.yml
+++ b/house.gov.by/34b939f57a446b8616b2a998ea274073dff804fd.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Fri, 27 Oct 2017 02:36:30 GMT
+    - Fri, 27 Oct 2017 04:20:40 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=julb3g1vsqbrfqoricsv1jmn27; path=/
+    - PHPSESSID=jkmtp72c4aq03b1espv605ag95; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - EXPIRED
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Fri, 27 Oct 2017 02:36:31 GMT
+recorded_at: Fri, 27 Oct 2017 04:20:40 GMT
