--- a/house.gov.by/203355d99f99eb9d37f57fbe5701c4a546004852.yml
+++ b/house.gov.by/203355d99f99eb9d37f57fbe5701c4a546004852.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Fri, 27 Oct 2017 03:10:24 GMT
+    - Fri, 27 Oct 2017 04:23:46 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -29,6 +29,8 @@ response:
     - keep-alive
     Vary:
     - Accept-Encoding
+    Set-Cookie:
+    - PHPSESSID=3t4tbj5os97ce1i3odvtl3gbs6; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -40,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - HIT
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Fri, 27 Oct 2017 03:10:24 GMT
+recorded_at: Fri, 27 Oct 2017 04:23:47 GMT
