--- a/house.gov.by/600ce5976f7e793ea39fbe05930f91ad74511f7c.yml
+++ b/house.gov.by/600ce5976f7e793ea39fbe05930f91ad74511f7c.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Fri, 27 Oct 2017 03:29:59 GMT
+    - Fri, 27 Oct 2017 04:38:22 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=6ee6kekmb542vfcqceo3p17s00; path=/
+    - PHPSESSID=dj6cb1ma4b5e3d5rsh990qvjr0; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - EXPIRED
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Fri, 27 Oct 2017 03:29:59 GMT
+recorded_at: Fri, 27 Oct 2017 04:38:23 GMT
