--- a/house.gov.by/5c6c1df8deff67757e87013192ccd6b1f02ac39e.yml
+++ b/house.gov.by/5c6c1df8deff67757e87013192ccd6b1f02ac39e.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Fri, 27 Oct 2017 03:11:15 GMT
+    - Fri, 27 Oct 2017 04:44:19 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=bpq1kn5g1vmdls7cmq2ai64bn5; path=/
+    - PHPSESSID=20dnbquog9b4lijddjfd07hmr1; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - EXPIRED
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Fri, 27 Oct 2017 03:11:17 GMT
+recorded_at: Fri, 27 Oct 2017 04:44:19 GMT
