--- a/house.gov.by/79ac58f5db031f00c3995cc55eddcd365e200256.yml
+++ b/house.gov.by/79ac58f5db031f00c3995cc55eddcd365e200256.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Fri, 27 Oct 2017 03:36:02 GMT
+    - Fri, 27 Oct 2017 04:56:45 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -29,8 +29,6 @@ response:
     - keep-alive
     Vary:
     - Accept-Encoding
-    Set-Cookie:
-    - PHPSESSID=e8kl225q2ts6lstni9frbaqav7; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +40,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - HIT
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Fri, 27 Oct 2017 03:36:02 GMT
+recorded_at: Fri, 27 Oct 2017 04:56:45 GMT
