--- a/house.gov.by/fd869c3f613d876a0d82c8c94d3eb1366e20902f.yml
+++ b/house.gov.by/fd869c3f613d876a0d82c8c94d3eb1366e20902f.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Fri, 27 Oct 2017 03:07:08 GMT
+    - Fri, 27 Oct 2017 05:04:30 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -29,6 +29,8 @@ response:
     - keep-alive
     Vary:
     - Accept-Encoding
+    Set-Cookie:
+    - PHPSESSID=0p477qgpljvivtfohshq255vm1; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -40,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - HIT
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Fri, 27 Oct 2017 03:07:08 GMT
+recorded_at: Fri, 27 Oct 2017 05:04:31 GMT
