--- a/house.gov.by/9b7e469bdec8b21f2c71544f7842ecc616e25cf7.yml
+++ b/house.gov.by/9b7e469bdec8b21f2c71544f7842ecc616e25cf7.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Fri, 27 Oct 2017 03:04:09 GMT
+    - Fri, 27 Oct 2017 05:31:58 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=47nrrjgkctbdvrpm457tjora70; path=/
+    - PHPSESSID=jqtgfmk967eua82pu85b3kemq1; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - EXPIRED
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Fri, 27 Oct 2017 03:04:09 GMT
+recorded_at: Fri, 27 Oct 2017 05:31:58 GMT
