--- a/house.gov.by/71488deaf54b16030ec2269c0421201f65e259e6.yml
+++ b/house.gov.by/71488deaf54b16030ec2269c0421201f65e259e6.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Fri, 27 Oct 2017 03:58:36 GMT
+    - Fri, 27 Oct 2017 05:43:41 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=mjb2pcqnbbjogh27mq15cdtbo4; path=/
+    - PHPSESSID=dl6di59gooqrjs33j0jvp6oer5; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - EXPIRED
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Fri, 27 Oct 2017 03:58:37 GMT
+recorded_at: Fri, 27 Oct 2017 05:43:42 GMT
