--- a/house.gov.by/175b8d419fa1bd9e9fad0a4be41ca720a1ad7a4c.yml
+++ b/house.gov.by/175b8d419fa1bd9e9fad0a4be41ca720a1ad7a4c.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Fri, 27 Oct 2017 03:52:05 GMT
+    - Fri, 27 Oct 2017 05:48:25 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -29,8 +29,6 @@ response:
     - keep-alive
     Vary:
     - Accept-Encoding
-    Set-Cookie:
-    - PHPSESSID=vfr9t2kgepff7a80p3s2lqvou6; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +40,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - HIT
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Fri, 27 Oct 2017 03:52:06 GMT
+recorded_at: Fri, 27 Oct 2017 05:48:25 GMT
