--- a/house.gov.by/392a9477f991af309f5fc9db54c5cc62a61556ac.yml
+++ b/house.gov.by/392a9477f991af309f5fc9db54c5cc62a61556ac.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Fri, 27 Oct 2017 05:22:13 GMT
+    - Sat, 28 Oct 2017 10:17:21 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -29,8 +29,6 @@ response:
     - keep-alive
     Vary:
     - Accept-Encoding
-    Set-Cookie:
-    - PHPSESSID=0kcf72ec402or7uvlema3g1tt0; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +40,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - HIT
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Fri, 27 Oct 2017 05:22:13 GMT
+recorded_at: Sat, 28 Oct 2017 10:17:22 GMT
