--- a/house.gov.by/7e9f66ca0cfc9e80efc44ab0f3443c074abd860d.yml
+++ b/house.gov.by/7e9f66ca0cfc9e80efc44ab0f3443c074abd860d.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Fri, 27 Oct 2017 05:30:12 GMT
+    - Sat, 28 Oct 2017 10:37:13 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -29,8 +29,6 @@ response:
     - keep-alive
     Vary:
     - Accept-Encoding
-    Set-Cookie:
-    - PHPSESSID=n120a83csn7395dhkf97iqj640; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +40,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - EXPIRED
+    - HIT
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Fri, 27 Oct 2017 05:30:12 GMT
+recorded_at: Sat, 28 Oct 2017 10:37:13 GMT
