--- a/house.gov.by/3b91cb8d0e15c5e1e63d274aea80d6eb4e441e68.yml
+++ b/house.gov.by/3b91cb8d0e15c5e1e63d274aea80d6eb4e441e68.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Fri, 27 Oct 2017 05:51:34 GMT
+    - Sat, 28 Oct 2017 10:38:32 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=kp0fk5j92pithitenbhgie07q4; path=/
+    - PHPSESSID=7m7dplvup5mu5jt5b8hqirg657; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - EXPIRED
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Fri, 27 Oct 2017 05:51:34 GMT
+recorded_at: Sat, 28 Oct 2017 10:38:33 GMT
