--- a/house.gov.by/375b520b3b22a4b7509bba10a782956fa4af5c86.yml
+++ b/house.gov.by/375b520b3b22a4b7509bba10a782956fa4af5c86.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Fri, 27 Oct 2017 05:48:52 GMT
+    - Sat, 28 Oct 2017 10:40:49 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -29,6 +29,8 @@ response:
     - keep-alive
     Vary:
     - Accept-Encoding
+    Set-Cookie:
+    - PHPSESSID=5j55gjlt8tbjsue6de7em4q5s4; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -40,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - HIT
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Fri, 27 Oct 2017 05:48:52 GMT
+recorded_at: Sat, 28 Oct 2017 10:40:50 GMT
