--- a/house.gov.by/d0a884277727eae17a1c4bd400cca7b7c6b0916d.yml
+++ b/house.gov.by/d0a884277727eae17a1c4bd400cca7b7c6b0916d.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Fri, 27 Oct 2017 05:31:21 GMT
+    - Sat, 28 Oct 2017 10:44:27 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=bm71cf2ptfdgf2l4l83c73o9q4; path=/
+    - PHPSESSID=tl7cnscfbvoa9sgkg53vosib03; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - EXPIRED
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Fri, 27 Oct 2017 05:31:22 GMT
+recorded_at: Sat, 28 Oct 2017 10:44:27 GMT
