--- a/house.gov.by/1fb00ecebacfe149b89cb2bcda4bc3b123d0d075.yml
+++ b/house.gov.by/1fb00ecebacfe149b89cb2bcda4bc3b123d0d075.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Fri, 27 Oct 2017 05:14:31 GMT
+    - Sat, 28 Oct 2017 10:45:38 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -29,6 +29,8 @@ response:
     - keep-alive
     Vary:
     - Accept-Encoding
+    Set-Cookie:
+    - PHPSESSID=os07ku8ejpfc59lr0jpqukhf07; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -40,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - HIT
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Fri, 27 Oct 2017 05:14:31 GMT
+recorded_at: Sat, 28 Oct 2017 10:45:39 GMT
