--- a/house.gov.by/e0bfa57e716611ea6eacdda6cc645de1d148b08c.yml
+++ b/house.gov.by/e0bfa57e716611ea6eacdda6cc645de1d148b08c.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Fri, 27 Oct 2017 05:41:30 GMT
+    - Sat, 28 Oct 2017 11:00:04 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=9cinuq6pjjr8fefjutjiq8ec02; path=/
+    - PHPSESSID=4djggub3hhkvbcnr44bba1jd94; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - EXPIRED
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Fri, 27 Oct 2017 05:41:31 GMT
+recorded_at: Sat, 28 Oct 2017 11:00:05 GMT
