--- a/house.gov.by/20e69e40d1db804e6053e5d915542e98be8ae879.yml
+++ b/house.gov.by/20e69e40d1db804e6053e5d915542e98be8ae879.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Fri, 27 Oct 2017 05:24:14 GMT
+    - Sat, 28 Oct 2017 11:00:29 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=l7kv8rujbmcg7krk8s40oad8e3; path=/
+    - PHPSESSID=ni4vkdcnib4e59k3unartuj292; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - EXPIRED
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Fri, 27 Oct 2017 05:24:15 GMT
+recorded_at: Sat, 28 Oct 2017 11:00:30 GMT
