--- a/house.gov.by/a9add64c7e632d6060a43fd791affef82f62ae6b.yml
+++ b/house.gov.by/a9add64c7e632d6060a43fd791affef82f62ae6b.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Fri, 27 Oct 2017 05:19:44 GMT
+    - Sat, 28 Oct 2017 11:15:35 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=nv9fteluu6n30qgm3mqmlpk4v1; path=/
+    - PHPSESSID=cobukb181v43dgd2jokhe4g1m2; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - EXPIRED
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Fri, 27 Oct 2017 05:19:45 GMT
+recorded_at: Sat, 28 Oct 2017 11:15:37 GMT
