--- a/house.gov.by/0f95b7f2059a5363c756684287725e57d866f43a.yml
+++ b/house.gov.by/0f95b7f2059a5363c756684287725e57d866f43a.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Fri, 27 Oct 2017 05:50:36 GMT
+    - Sat, 28 Oct 2017 11:24:34 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=764ial3c01cqf3ruv0i0dnvhu5; path=/
+    - PHPSESSID=nbtpnvdkfkeicjdcu3l0r8ap60; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - EXPIRED
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Fri, 27 Oct 2017 05:50:37 GMT
+recorded_at: Sat, 28 Oct 2017 11:24:35 GMT
