--- a/house.gov.by/175b8d419fa1bd9e9fad0a4be41ca720a1ad7a4c.yml
+++ b/house.gov.by/175b8d419fa1bd9e9fad0a4be41ca720a1ad7a4c.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Fri, 27 Oct 2017 05:48:25 GMT
+    - Sat, 28 Oct 2017 11:30:00 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -29,6 +29,8 @@ response:
     - keep-alive
     Vary:
     - Accept-Encoding
+    Set-Cookie:
+    - PHPSESSID=rk38seoi9mss99jnh6bcfs0fp5; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -40,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - HIT
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Fri, 27 Oct 2017 05:48:25 GMT
+recorded_at: Sat, 28 Oct 2017 11:30:01 GMT
