--- a/house.gov.by/bba2b399edfbdd7001d27d69129864633c2b0114.yml
+++ b/house.gov.by/bba2b399edfbdd7001d27d69129864633c2b0114.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Fri, 27 Oct 2017 05:47:03 GMT
+    - Sat, 28 Oct 2017 11:39:10 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=olfo6bcs3dalhstspbhp78nea5; path=/
+    - PHPSESSID=t38aegmi9ope0ls0lhcs68fjj6; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - EXPIRED
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Fri, 27 Oct 2017 05:47:05 GMT
+recorded_at: Sat, 28 Oct 2017 11:39:12 GMT
